force-app/main/default/objects/Account/fields/Account_Auto_Cage_free_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Account_Auto_Cage_free_Commitment__c</fullName>
    <label>Account Auto Cage-free Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Asia commitment</fullName>
            </value>
            <value>
                <fullName>Partial Asia commitment</fullName>
            </value>
            <value>
                <fullName>No Asia commitment</fullName>
            </value>
            <value>
                <fullName>Committed US and/or EU but not elsewhere</fullName>
            </value>
            <value>
                <fullName>Committed for company-owned operations but not franchisees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>