force-app/main/default/objects/Account/fields/Account_Auto_Commitment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Auto_Commitment_Notes__c</fullName>
    <label>Account Auto Commitment Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>