force-app/main/default/objects/Account/fields/Account_Auto_process_Stage_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Account_Auto_process_Stage_of_Engagement__c</fullName>
    <label>Account Auto-process Stage of Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No reachouts to company</fullName>
            </value>
            <value>
                <fullName>Reachouts but no reply</fullName>
            </value>
            <value>
                <fullName>Reply but no meeting</fullName>
            </value>
            <value>
                <fullName>Initial meeting</fullName>
            </value>
            <value>
                <fullName>Active engagement</fullName>
            </value>
            <value>
                <fullName>Lapsed (no longer active)</fullName>
            </value>
            <value>
                <fullName>First Email Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>