force-app/main/default/objects/Account/fields/Account_Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_CN__c</fullName>
    <label>Trade Name (Chinese)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>