force-app/main/default/objects/Account/fields/Animal_welfare_case_open__c.field-meta.xml
<CustomField>
    <fullName>Animal_welfare_case_open__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal welfare case open</label>
    <type>Checkbox</type>
</CustomField>