force-app/main/default/objects/Account/fields/Bonnie_Company_Label__c.field-meta.xml
<CustomField>
    <fullName>Bonnie_Company_Label__c</fullName>
    <label>Bonnie Company Label</label>
    <type>TextArea</type>
</CustomField>