force-app/main/default/objects/Account/fields/Changed_Closed_etc__c.field-meta.xml
<CustomField>
    <fullName>Changed_Closed_etc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changed/Closed etc</label>
    <type>Checkbox</type>
</CustomField>