force-app/main/default/objects/Account/fields/Company_size__c.field-meta.xml
<CustomField>
    <fullName>Company_size__c</fullName>
    <label>Company size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 100 operations outside the West</fullName>
            </value>
            <value>
                <fullName>More than 100 operations outside the West</fullName>
            </value>
            <value>
                <fullName>More than 500 operations outside the West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>