force-app/main/default/objects/Account/fields/CountriesOperatingIn__c.field-meta.xml
<CustomField>
    <fullName>CountriesOperatingIn__c</fullName>
    <label>Countries Operating in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>South Korea</fullName>
            </value>
            <value>
                <fullName>Vietnam</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
            <value>
                <fullName>Laos</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
            <value>
                <fullName>Myanmar</fullName>
            </value>
            <value>
                <fullName>Macau</fullName>
            </value>
            <value>
                <fullName>Mongolia</fullName>
            </value>
            <value>
                <fullName>Brunei</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>Sri Lanka</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Nepal</fullName>
            </value>
            <value>
                <fullName>MENAT</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Australasia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>