force-app/main/default/objects/Account/fields/Detailed_info_country_ops__c.field-meta.xml
<CustomField>
    <fullName>Detailed_info_country_ops__c</fullName>
    <label>Detailed info country ops</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>