force-app/main/default/objects/Account/fields/DoNotContact__c.field-meta.xml
<CustomField>
    <fullName>DoNotContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>