force-app/main/default/objects/Account/fields/Email_text__c.field-meta.xml
<CustomField>
    <fullName>Email_text__c</fullName>
    <label>Email (text)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>