force-app/main/default/objects/Account/fields/EquitasCampaign__c.field-meta.xml
<CustomField>
    <fullName>EquitasCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equitas Campaign</label>
    <type>Checkbox</type>
</CustomField>