force-app/main/default/objects/Account/fields/Extensive_Company_Notes__c.field-meta.xml
<CustomField>
    <fullName>Extensive_Company_Notes__c</fullName>
    <label>Extensive Company Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>