force-app/main/default/objects/Account/fields/Extent_of_cage_free_commitment__c.field-meta.xml
<CustomField>
    <fullName>Extent_of_cage_free_commitment__c</fullName>
    <label>Extent of cage-free commitment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Asia commitment</fullName>
            </value>
            <value>
                <fullName>Partial Asia commitment</fullName>
            </value>
            <value>
                <fullName>No Asia commitment</fullName>
            </value>
            <value>
                <fullName>Committed US and/or EU but not elsewhere</fullName>
            </value>
            <value>
                <fullName>Committed for company-owned operations but not franchisees</fullName>
            </value>
            <value>
                <fullName>Full global commitment</fullName>
            </value>
            <value>
                <fullName>No commitment anywhere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>