force-app/main/default/objects/Account/fields/Food_Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>Food_Industry_Sector__c</fullName>
    <label>Food Industry Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food Service</fullName>
                <label>food service companies</label>
            </value>
            <value>
                <fullName>Hospitality</fullName>
                <label>hospitality companies</label>
            </value>
            <value>
                <fullName>Packaged Goods</fullName>
                <label>packaged goods companies</label>
            </value>
            <value>
                <fullName>Restaurant or Cafes</fullName>
                <label>restaurants or cafes</label>
            </value>
            <value>
                <fullName>Retailer or Convenience</fullName>
                <label>retailers or convenience shops</label>
            </value>
            <value>
                <fullName>Bakery</fullName>
                <label>bakery companies</label>
            </value>
            <value>
                <fullName>Distributor</fullName>
                <label>distributors</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>