force-app/main/default/objects/Account/fields/Food_Industry_Sector_formula__c.field-meta.xml
<CustomField>
    <fullName>Food_Industry_Sector_formula__c</fullName>
    <formula>IF(INCLUDES(Food_Industry_Sector__c, &quot;Food Service&quot;), &quot;Food Service; &quot;, null)&amp;
IF(INCLUDES(Food_Industry_Sector__c, &quot;Hospitality&quot;), &quot;Hospitality; &quot;, null)&amp;
IF(INCLUDES(Food_Industry_Sector__c, &quot;Packaged Goods&quot;), &quot;Packaged Goods; &quot;, null)&amp;
IF(INCLUDES(Food_Industry_Sector__c, &quot;Retailer or Convenience&quot;), &quot;Retailer or Convenience; &quot;, null)&amp;
IF(INCLUDES(Food_Industry_Sector__c, &quot;Restaurant or Cafes&quot;), &quot;Restaurant or Cafes; &quot;, null)&amp;
IF(INCLUDES(Food_Industry_Sector__c, &quot;Bakery&quot;), &quot;Bakery; &quot;, null)&amp;
IF(INCLUDES(Food_Industry_Sector__c, &quot;Distributor&quot;), &quot;Distributor; &quot;, null)&amp;
IF(INCLUDES(Food_Industry_Sector__c, &quot;Other&quot;), &quot;Other; &quot;, null)&amp;
IF(INCLUDES(Food_Industry_Sector__c, &quot;Multiple&quot;), &quot;Multiple; &quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food Industry Sector (formula)</label>
    <type>Text</type>
</CustomField>