force-app/main/default/objects/Account/fields/General_Contact_Information_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Contact_Information_Notes__c</fullName>
    <label>General Contact Information Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>