force-app/main/default/objects/Account/fields/Kirsty_Company_Lable__c.field-meta.xml
<CustomField>
    <fullName>Kirsty_Company_Lable__c</fullName>
    <label>Kirsty Company Lable</label>
    <type>TextArea</type>
</CustomField>