force-app/main/default/objects/Account/fields/LilyChen_Company_Label__c.field-meta.xml
<CustomField>
    <fullName>LilyChen_Company_Label__c</fullName>
    <label>LilyChen Company Label</label>
    <type>TextArea</type>
</CustomField>