force-app/main/default/objects/Account/fields/LilyTse_Company_Label__c.field-meta.xml
<CustomField>
    <fullName>LilyTse_Company_Label__c</fullName>
    <label>LilyTse Company Label</label>
    <type>TextArea</type>
</CustomField>