force-app/main/default/objects/Account/fields/Mutzu_Company_Label__c.field-meta.xml
<CustomField>
    <fullName>Mutzu_Company_Label__c</fullName>
    <label>Mutzu Company Label</label>
    <type>TextArea</type>
</CustomField>