force-app/main/default/objects/Account/fields/Need_Open_Engagement_Case__c.field-meta.xml
<CustomField>
    <fullName>Need_Open_Engagement_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>[Only applicable when opening new Account] 
Check this box if cage-free egg engagement is needed to be followed up. An opportunity will be automatically created.</inlineHelpText>
    <label>Need Open Engagement Case?</label>
    <type>Checkbox</type>
</CustomField>