force-app/main/default/objects/Account/fields/Nick_Company_Label__c.field-meta.xml
<CustomField>
    <fullName>Nick_Company_Label__c</fullName>
    <label>Nick Company Label</label>
    <type>TextArea</type>
</CustomField>