force-app/main/default/objects/Account/fields/Phone_text__c.field-meta.xml
<CustomField>
    <fullName>Phone_text__c</fullName>
    <label>Phone (text)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>