force-app/main/default/objects/Account/fields/Relevant_Issue__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Issue__c</fullName>
    <label>Relevant Issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alternative Protein</fullName>
            </value>
            <value>
                <fullName>Animal welfare policy</fullName>
            </value>
            <value>
                <fullName>Cage-free Eggs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>