force-app/main/default/objects/Account/fields/Ruby_Company_Label__c.field-meta.xml
<CustomField>
    <fullName>Ruby_Company_Label__c</fullName>
    <label>Ruby Company Label</label>
    <type>TextArea</type>
</CustomField>