force-app/main/default/objects/Account/fields/Size_of_company__c.field-meta.xml
<CustomField>
    <fullName>Size_of_company__c</fullName>
    <label>Size of company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 100 operations outside the West</fullName>
            </value>
            <value>
                <fullName>More than 100 operations outside the West</fullName>
            </value>
            <value>
                <fullName>More than 500 operations outside the West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>