force-app/main/default/objects/Account/fields/Type_of_Entity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Entity__c</fullName>
    <label>Type of Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food Company</fullName>
            </value>
            <value>
                <fullName>Egg Supplier</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>