force-app/main/default/objects/Account/fields/Website_text__c.field-meta.xml
<CustomField>
    <fullName>Website_text__c</fullName>
    <label>Website (text)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>