force-app/main/default/objects/Account/recordTypes/Lever_s_Partners.recordType-meta.xml
<RecordType>
    <fullName>Lever_s_Partners</fullName>
    <active>true</active>
    <label>Lever&apos;s Partners</label>
</RecordType>