force-app/main/default/objects/Account/listViews/Angela_s_Accounts.listView-meta.xml
<ListView>
    <fullName>Angela_s_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <filterScope>Mine</filterScope>
    <label>Angela&apos;s Accounts</label>
</ListView>