force-app/main/default/objects/Account/listViews/Lily_s_China_Company.listView-meta.xml
<ListView>
    <fullName>Lily_s_China_Company</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Lily&apos;s China Company</label>
</ListView>