force-app/main/default/objects/Account/listViews/Organization_Accounts.listView-meta.xml
<ListView>
    <fullName>Organization_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Organization Accounts</label>
</ListView>